[package]
name = "price-service-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
futures-util = "0.3.30"
log = "0.4.22"
pyth-sdk = "0.8.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"

