[package]
name = "price-service-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.3"
futures-util = "0.3.30"
log = "0.4.22"
pyth-sdk = { git = "https://github.com/aoikurokawa/pyth-sdk-rs" }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
url = "2.5.2"

[[example]]
name = "price_service_client"
path = "./examples/price_service_client.rs"

[[example]]
name = "subscribe_price_feed_updates"
path = "./examples/subscribe_price_feed_updates.rs"
